--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,23 +12,23 @@
          serve(String).with(Class<? extends HttpServlet>) and
          filter(String).through(Class<? extends Filter)
      -->
-    <listener>
-        <listener-class>
-            com.igorkurilenko.gwt.samples.oauth2client.server.guice.GuiceServletConfig
-        </listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>-->
+            <!--com.igorkurilenko.gwt.samples.oauth2client.server.guice.GuiceServletConfig-->
+        <!--</listener-class>-->
+    <!--</listener>-->
 
-    <filter>
-        <filter-name>guiceFilter</filter-name>
-        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
-    </filter>
+    <!--<filter>-->
+        <!--<filter-name>guiceFilter</filter-name>-->
+        <!--<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>-->
+    <!--</filter>-->
 
-    <filter-mapping>
-        <filter-name>guiceFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter-mapping>-->
+        <!--<filter-name>guiceFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
-    <session-config>
-        <session-timeout>60</session-timeout>
-    </session-config>
+    <!--<session-config>-->
+        <!--<session-timeout>60</session-timeout>-->
+    <!--</session-config>-->
 </web-app>
