--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <target.jdk>1.7</target.jdk>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
     </properties>
 
     <build>
@@ -68,9 +69,33 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>io.itdraft.gwt</groupId>
+            <artifactId>oauth2client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.itdraft.gwt</groupId>
+            <artifactId>oauth2client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <!-- NOTE: we don't use type=java-source here to avoid copying sources; this is because we're in a gwt-app -->
+            <classifier>sources</classifier>
+        </dependency>
         <!-- GWTP -->
         <dependency>
             <groupId>com.gwtplatform</groupId>
